hphp/hack/test/typecheck/bitwisenot.php.rust_elab.exp
File "bitwisenot.php", line 20, characters 6-11:
`HH\BuiltinEnum` is an implementation internal class that cannot be used directly (Naming[2053])
